# fastapi-openapi-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  devyard.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: development.en.md  development.md  development.zh.md  faq.en.md  faq.md  faq.zh.md  getting-started.en.md  getting-started.md  index.en.md  index.md
docs/concepts/: openapi-to-agent.en.md  openapi-to-agent.md
docs/guides/: configuration.en.md  configuration.md  embedded-agent-vs-mcp.en.md  embedded-agent-vs-mcp.zh.md  embedding.en.md  embedding.md  openapi-quality.en.md  openapi-quality.zh.md  security.en.md  security.md
docs/reference/: http-api.en.md  http-api.md  python-api.en.md  python-api.md  python-api.zh.md
examples/: demo.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vite.loader.config.ts
frontend/src/: App.tsx  main.tsx  sidebar-loader.ts  styles.css  types.ts
frontend/src/app/: AgentApp.tsx  config.ts  i18n.ts  styles.ts  theme.ts
frontend/src/chat/: bridge.ts  client.ts  sse.ts  stream-events.ts
frontend/src/components/: AgentHeader.tsx  Composer.tsx  ConversationDrawer.tsx  EmptyState.tsx  MessageList.tsx
frontend/src/hooks/: use-conversations.ts
frontend/src/lib/: markdown.ts  utils.ts
frontend/src/loader/: config.ts  request-bridge.ts  resize.ts  styles.ts  types.ts
src/openagent/: __init__.py  catalog.py  deepseek.py  django_ninja.py  events.py  fastapi.py  i18n.py  llm.py  responder.py  runtime.py  sdk.py
src/openagent/static/: __init__.py  sidebar.js
src/openagent/static/widget/: index.html
src/openagent/static/widget/assets/: index-2B887D8G.js  index-BdvIsWTP.js  index-Bdyk2QyH.js  index-Bi9VBmz9.css  index-BushHtyz.css  index-BwE8oRd_.css  index-C5jD3VdA.css  index-C8zndLdc.js  index-DtvvVHzD.css  index-aalOrma8.js
tests/: test_django_ninja.py  test_plugin.py
