[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagent"
version = "0.1.0"
description = "An OpenAPI-native API agent core with framework adapters."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "openagent contributors" }
]
keywords = ["openapi", "agent", "api", "fastapi", "sidebar"]
dependencies = [
  "pydantic>=1.10.0",
  "httpx>=0.24.0"
]

[project.optional-dependencies]
fastapi = [
  "fastapi>=0.100.0"
]
dev = [
  "fastapi>=0.100.0",
  "pytest>=7.4.0",
  "uvicorn[standard]>=0.23.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/openagent"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "frontend",
  "examples",
  "tests",
  "README.md",
  "devyard.yml"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
