[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-openapi-agent"
version = "0.1.0"
description = "An OpenAPI-native API agent for FastAPI and Django Ninja."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "openagent contributors" }
]
keywords = ["openapi", "agent", "api", "fastapi", "django-ninja", "llm", "sidebar", "sse"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=1.10.0",
  "httpx>=0.24.0"
]

[project.urls]
Homepage = "https://github.com/yangsengui/fastapi-openapi-agent"
Repository = "https://github.com/yangsengui/fastapi-openapi-agent"
Issues = "https://github.com/yangsengui/fastapi-openapi-agent/issues"
Documentation = "https://yangsengui.github.io/fastapi-openapi-agent/"
Changelog = "https://github.com/yangsengui/fastapi-openapi-agent/blob/main/CHANGELOG.md"

[project.optional-dependencies]
fastapi = [
  "fastapi>=0.100.0"
]
django-ninja = [
  "django>=4.2",
  "django-ninja>=1.0"
]
llm = [
  "litellm>=1.40.0,<2.0.0",
  "orjson>=3.9.0"
]
dev = [
  "django>=4.2",
  "django-ninja>=1.0",
  "fastapi>=0.100.0",
  "pytest>=7.4.0",
  "uvicorn[standard]>=0.23.0",
  "build>=1.2.0",
  "twine>=5.0.0"
]
docs = [
  "mkdocs-material>=9.6.0,<10.0.0",
  "mkdocs-static-i18n>=1.2.0,<2.0.0"
]
release = [
  "build>=1.2.0",
  "twine>=5.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/openagent"]

[tool.hatch.build.targets.sdist]
include = [
  "CHANGELOG.md",
  "LICENSE",
  "src",
  "frontend",
  "docs",
  "examples",
  "tests",
  "README.md",
  "mkdocs.yml",
  "devyard.yml"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
